<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">krAndroy_VolleyExtSample</string>
    <string name="action_settings">Settings</string>
	<string name="jackson1_text">--- Jackson 1.x ---</string>
	<string name="jackson2_text">--- Jackson 2.x ---</string>
	<string name="waiting_for_response">Waiting for a response . . .</string>
	<string name="amazon_activity_text">Amazon XML-format RSS Feed</string>
	<string name="github_activity_text">Github JSON-format User API</string>
    <string name="single_tap_zoom_network_image_view_activity_text">Single Tap Zoom NetworkImageView</string>
    <string name="double_tap_zoom_network_image_view_activity_text">Double Tap Zoom NetworkImageView</string>	
    <string name="facebook_test">FacebookConnTest</string>	
    <string name="sqlite_test">SQLiteTest</string>	
    <string name="instagram_test">InstagramTest</string>	    
    <string name="ormlite_test">ORMLiteTest</string>	
    <string name="sqlite_insert_test">SQLite Insert Test</string>	
    <string name="sqlite_delete_test">SQLite Delete Test</string>	    
    <string name="facebook_login">FacebookLogin</string>	
</resources>
