<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical" >
    <Button
        android:id="@+id/test_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram_test" />            
    <Button
        android:id="@+id/test_sqlite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_test" />        
    <Button
        android:id="@+id/test_ormlite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ormlite_test" />                
    <Button
        android:id="@+id/facebook_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_test" />    
    <Button
        android:id="@+id/github_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_activity_text" />
    <Button
        android:id="@+id/amazon_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amazon_activity_text" />
    <Button
        android:id="@+id/single_tap_zoom_network_image_view_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_tap_zoom_network_image_view_activity_text" />    
    <Button
        android:id="@+id/double_tap_zoom_network_image_view_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_tap_zoom_network_image_view_activity_text" />
</LinearLayout>